[tool.poetry]
name = "jsapy"
version = "0.1.0"
description = "JSAPY (Job Safety Analysis in ppython) is a package with tools for occupational risk prevention."
authors = ["Erik Martínez Sixto"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
