[tool.poetry]
name = "jsapy"
version = "1.0.0"
description = "JSAPY (Job Safety Analysis in ppython) is a package with tools for occupational risk prevention."
authors = ["Erik Martínez Sixto"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12.8"
numpy = ">=2.2.0"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
myst-nb = "^1.2.0"
sphinx-autoapi = "^3.6.0"
sphinx-rtd-theme = "^3.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
